--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.0</version>
+		<version>3.0.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bezkoder</groupId>
-	<artifactId>spring-boot-login-example</artifactId>
+	<groupId>com.ergasia</groupId>
+	<artifactId>metabibasi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-login-example</name>
-	<description>Spring Boot Login example with Spring Security, JWT and MySQL - Rest API</description>
+	<name>ergasia metabibasi oximatos</name>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
