--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,21 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/testdb_spring?useSSL=false
+server.port= 9000
+
+spring.datasource.url= jdbc:mysql://localhost:3306/ergasiadb?useSSL=false
 spring.datasource.username= root
-spring.datasource.password= 123456
+spring.datasource.password= toor
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
-bezkoder.app.jwtCookieName= bezkoder
-bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================
-bezkoder.app.jwtExpirationMs= 30000
+ergasia.app.jwtCookieName= ergasia
+ergasia.app.jwtSecret= ======================ergasia=Spring===========================
+ergasia.app.jwtExpirationMs= 3000000
 #86400000
+
+logging.level.org.springframework= INFO
+logging.level.org.springframework.security= DEBUG
+logging.level.org.springframework.security.oauth2= DEBUG
+logging.level.org.jooq= DEBUG
+logging.level.org.ergasia= DEBUG
